; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/bsnmp/snmpd/extr_trans_inet.c_inet_alloc_buf.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/bsnmp/snmpd/extr_trans_inet.c_inet_alloc_buf.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.port_input = type { i32, i32, i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.port_input*)* @inet_alloc_buf to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @inet_alloc_buf(%struct.port_input* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.port_input*, align 8
  %4 = alloca [2000 x i8], align 16
  store %struct.port_input* %0, %struct.port_input** %3, align 8
  %5 = load %struct.port_input*, %struct.port_input** %3, align 8
  %6 = getelementptr inbounds %struct.port_input, %struct.port_input* %5, i32 0, i32 2
  %7 = load i32*, i32** %6, align 8
  %8 = icmp eq i32* %7, null
  br i1 %8, label %9, label %24

9:                                                ; preds = %1
  %10 = call i32* @buf_alloc(i32 0)
  %11 = load %struct.port_input*, %struct.port_input** %3, align 8
  %12 = getelementptr inbounds %struct.port_input, %struct.port_input* %11, i32 0, i32 2
  store i32* %10, i32** %12, align 8
  %13 = icmp eq i32* %10, null
  br i1 %13, label %14, label %20

14:                                               ; preds = %9
  %15 = load %struct.port_input*, %struct.port_input** %3, align 8
  %16 = getelementptr inbounds %struct.port_input, %struct.port_input* %15, i32 0, i32 1
  %17 = load i32, i32* %16, align 4
  %18 = getelementptr inbounds [2000 x i8], [2000 x i8]* %4, i64 0, i64 0
  %19 = call i32 @recvfrom(i32 %17, i8* %18, i32 2000, i32 0, i32* null, i32* null)
  store i32 -1, i32* %2, align 4
  br label %25

20:                                               ; preds = %9
  %21 = call i32 @buf_size(i32 0)
  %22 = load %struct.port_input*, %struct.port_input** %3, align 8
  %23 = getelementptr inbounds %struct.port_input, %struct.port_input* %22, i32 0, i32 0
  store i32 %21, i32* %23, align 8
  br label %24

24:                                               ; preds = %20, %1
  store i32 0, i32* %2, align 4
  br label %25

25:                                               ; preds = %24, %14
  %26 = load i32, i32* %2, align 4
  ret i32 %26
}

declare dso_local i32* @buf_alloc(i32) #1

declare dso_local i32 @recvfrom(i32, i8*, i32, i32, i32*, i32*) #1

declare dso_local i32 @buf_size(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
